Fixed spacing of Weather Icon on css

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -36,7 +36,7 @@
   }
   
   .Weather canvas {
-    margin: 10px auto;
+    margin-left: 0px;
   }
   
   .Weather .unit {
